alertmanager/alertmanager-operated-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-operated
  namespace: prometheus-huang
  labels:
    k8s-app: alertmanager
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/component: alertmanager
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
spec:
  type: "ClusterIP"
  clusterIP: None
  selector:
    k8s-app: alertmanager
  ports:
    - name: mesh
      port: 6783
      protocol: TCP
      targetPort: 6783
    - name: http
      port: 9093
      protocol: TCP
      targetPort: 9093
